<resources>
    <string name="app_name">Jastipin Aja</string>
    <string name="logo">logo</string>
    <string name="email">Email</string>
    <string name="email_address">Alamat Email</string>
    <string name="password">Kata Sandi</string>
    <string name="login">Login</string>
    <string name="forgot_password">Lupa Kata Sandi?</string>
    <string name="register_here">Belum Punya Akun? Daftar Disini</string>
    <string name="registration">Pendaftaran</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="repeat_password">Ulangi Kata Sandi</string>
    <string name="register">Daftar</string>
    <string name="return_to_login">Kembali ke Login</string>
    <string name="front_desc">Selamat Datang di JastipinAja!\nTitip Menitip Lebih Mudah Bersama Kami</string>
    <string name="lets_start">Yuk Mulai!</string>
    <string name="skip">Lewati</string>
    <string name="skip_and_shop">Lewati dan Langsung Belanja</string>
    <string name="back">Kembali</string>
    <string name="logout">Keluar</string>
    <string name="version">Version 1.0.0-SNAPSHOT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post">Post</string>
    <string name="home">Beranda</string>
    <string name="favorite">Favorit</string>
    <string name="transaction">Transaksi</string>
    <string name="profile">Profil</string>
    <string name="jastipin_aja">Jastipin Aja</string>
    <string name="search">Cari</string>
    <string name="srarch_here">Cari disini. . .</string>
    <string name="city">Kota</string>
    <string name="see_all">Lihat Semua</string>
    <string name="product">produk</string>
    <string name="city_name">Nama Kota</string>
    <string name="location">Lokasi</string>
    <string name="price">Harga</string>
    <string name="date">Tanggal</string>
    <string name="slider_image">Slider Image</string>
    <string name="jastip_product">Produk Jastip</string>
    <string name="top_request">Permintaan Terbanyak</string>
    <string name="label_detail_barang">Detail Barang</string>
    <string name="label_unggah_gambar">Unggah Gambar</string>
    <string name="label_foto_gambar">Foto Gambar</string>
    <string name="label_nama_barang">Nama barang</string>
    <string name="label_deskripsi_barang">Deskripsi Barang</string>
    <string name="label_jumlah">Jumlah</string>
    <string name="label_harga_barang">Request Harga Barang (Rp)</string>
    <string name="label_keterangan_barang">Keterangan Barang</string>
    <string name="label_lokasi">Detail Lokasi</string>
    <string name="label_deadline_barang">Tanggal Berakhir</string>
    <string name="label_post">post</string>
    <string name="page_post_jastip">Post Barang</string>
    <string name="page_post_request_barang">Post Permintaan Barang</string>
    <string name="page_post_jastip_all">Semua Barang</string>
    <string name="page_post_request_barang_all">Permintaan Terbanyak</string>
    <string name="label_chat">Chat</string>
    <string name="label_beli_sekarang">Beli Sekarang</string>
    <string name="label_bantu_belikan">Bantu Belikan</string>

    <string name="address">Alamat</string>
    <string name="close">Keluar</string>
    <string name="username">Nama User</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="account">Akun</string>
    <string name="activity">Aktivitas</string>
    <string name="sold">Terjual</string>
    <string name="purchased">Terbeli</string>
    <string name="nol">0</string>
    <string name="action">Aksi</string>
    <string name="my_post">Post Saya</string>
    <string name="live_shop">Live Shop</string>
    <string name="choice">Pilihan</string>
    <string name="post_jastip">Post Jastip</string>
    <string name="request_jastip">Tolong Belikan</string>
    <string name="notification">Notifikasi</string>
    <string name="transaction_date">Tanggal Transaksi</string>
    <string name="transaction_type">Jenis Transaksi</string>
    <string name="transaction_progress">Progress Transaksi</string>
    <string name="message_preview">Cuplikan Pesan</string>
    <string name="example_date">12:00</string>
    <string name="setting">setting</string>
    <string name="account_name">Nama Akun</string>
    <string name="save">Simpan</string>
    <string name="cancel">Batal</string>

    <string name="label_title_posting">Apa yang ingin kamu posting?</string>
    <string name="label_post_barang">Post Barang</string>
    <string name="label_request_barang">Request Barang</string>
    <string name="label_kategori">Kategori</string>
    <string name="label_deskripsi_produk">Deskripsi Produk</string>
    <string name="label_total_transaksi">Total Transaksi</string>
    <string name="label_progress">Progress</string>
    <string name="label_jasa_jastip">Jasa Jastip (Rp)</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="product_price">Harga Barang (Rp)</string>
    <string name="label_alamat_kirim">Alamat Kirim</string>
    <string name="next_to_pay">Lanjutkan Ke Pembayaran</string>
    <string name="label_metode_pembayaran">Metode Pembayaran</string>
    <string name="label_cod">COD</string>
    <string name="label_pengiriman">Pengiriman</string>

    <string-array name="category">
        <item>Fashion dan Aksesoris</item>
        <item>Produk Kecantikan</item>
        <item>Olahraga</item>
        <item>Peralatan Rumah Tangga</item>
        <item>Ibu dan Anak</item>
    </string-array>

    <string-array name="province">
        <item>Jakarta</item>
        <item>Jawa Timur</item>
        <item>Jawa Barat</item>
        <item>Jawa Tengah</item>
        <item>Yogyakarta</item>
    </string-array>

    <string-array name="city">
        <item>Jakarta</item>
        <item>Bandung</item>
        <item>Surabaya</item>
        <item>Malang</item>
        <item>Semarang</item>
        <item>Mataram</item>
        <item>Bogor</item>
    </string-array>

    <string-array name="expedition">
        <item>JNE</item>
        <item>JNT</item>
        <item>Antareja</item>
        <item>Sicepat</item>
        <item>Go-Send</item>
    </string-array>
</resources>
