<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home"/>

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/favorite"/>

    <item
        android:id="@+id/navigation_post"
        android:enabled="false"
        android:title="@string/post"
        />

    <item
        android:id="@+id/navigation_transaction"
        android:icon="@drawable/ic_transform_black_24dp"
        android:title="@string/transaction"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/profile"/>

</menu>