<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/layout_message"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="90dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_user_image"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_margin="18dp"
        android:src="@drawable/person_icon"
        app:civ_border_color="@color/colorGrey"
        app:civ_border_width="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:text="@string/username"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@id/civ_user_image"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_message_preview"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/message_preview"
        android:textSize="15sp"
        android:singleLine="true"
        app:layout_constraintStart_toEndOf="@id/civ_user_image"
        app:layout_constraintTop_toBottomOf="@id/tv_user_name"/>

    <TextView
        android:id="@+id/tv_message_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="18dp"
        android:text="@string/example_date"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_unread_message_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="18dp"
        android:text="@string/nol"
        android:gravity="center"
        android:textSize="15sp"
        android:background="@drawable/bg_circle"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_message_date"/>

</androidx.constraintlayout.widget.ConstraintLayout>
