<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="170dp"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardElevation="2dp"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_product"
                android:layout_width="150dp"
                android:layout_height="120dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/product"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/jastipin_logo" />

            <TextView
                android:id="@+id/tv_product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                android:fontFamily="@font/roboto_bold" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_marginStart="10dp"
                android:textSize="12sp"
                android:fontFamily="@font/roboto_regular" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginStart="10dp"
                android:textSize="12sp"
                android:fontFamily="@font/roboto_regular" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="12sp"
                android:fontFamily="@font/roboto_regular" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>