<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".FrontOptionActivity">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/jastipin_logo"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/front_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/front_desc"
        android:textAlignment="center"
        android:textSize="17sp"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_logo" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="100dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/front_desc"
        app:layout_constraintVertical_bias="0.50">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/lets_start"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textColor="@color/vpi__bright_foreground_disabled_holo_dark"
                android:fontFamily="@font/roboto_bold"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:weightSum="2">

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/register"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/vpi__bright_foreground_disabled_holo_dark"
                    android:textSize="15sp"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/colorWhite"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/login"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="15sp"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/colorWhite"
                    android:textColor="@color/vpi__bright_foreground_disabled_holo_dark"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_skip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/skip_and_shop"
                android:fontFamily="@font/roboto_bold"
                android:textSize="15sp"
                android:textAllCaps="false"
                android:textColor="@color/vpi__bright_foreground_disabled_holo_dark"
                android:backgroundTint="@color/colorWhite"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>